# phomemo-macos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml
Formula/: phomemo-macos.rb
backend/: phomemo-ble-backend  phomemo-serial
drv/: phomemo-d30.drv  phomemo-m02.drv  phomemo-m02pro.drv  phomemo-m110.drv  phomemo-m421.drv
scripts/: postinstall  uninstall.sh
src/: lib.rs
tests/: filters.rs
